// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar Renders "Not logged in" correctly 1`] = `
<React.Fragment>
  <Blueprint4.Navbar
    className="NavigationBar primary-navbar primary-navbar bp4-dark"
  >
    <Blueprint4.NavbarGroup
      align="left"
    >
      <Blueprint4.Popover2
        boundary="clippingParents"
        captureDismiss={false}
        content={
          <Blueprint4.Navbar>
            <Blueprint4.NavbarGroup
              align="left"
            />
          </Blueprint4.Navbar>
        }
        defaultIsOpen={false}
        disabled={true}
        fill={false}
        hasBackdrop={false}
        hoverCloseDelay={300}
        hoverOpenDelay={150}
        inheritDarkTheme={true}
        interactionKind="hover"
        matchTargetWidth={false}
        minimal={false}
        openOnTargetFocus={true}
        popoverClassName="desktop-navbar-popover"
        position="bottom-right"
        positioningStrategy="absolute"
        shouldReturnFocusOnClose={false}
        targetTagName="span"
        transitionDuration={300}
        usePortal={true}
      >
        <NavLink
          className="NavigationBar__link bp4-button bp4-minimal bp4-active"
          to="/welcome"
        >
          <Blueprint4.Icon
            icon="symbol-diamond"
          />
          <Blueprint4.NavbarHeading
            style={
              Object {
                "paddingBottom": "0px",
              }
            }
          >
            Source Academy @ NUS
          </Blueprint4.NavbarHeading>
        </NavLink>
      </Blueprint4.Popover2>
      <NavLink
        className={[Function]}
        title="Classroom"
        to="/githubassessments"
      >
        <Blueprint4.Icon
          icon="briefcase"
        />
        <div
          className=""
        >
          Classroom
        </div>
      </NavLink>
    </Blueprint4.NavbarGroup>
    <Blueprint4.NavbarGroup
      align="right"
    >
      <NavLink
        className={[Function]}
        to="/contributors"
      >
        <Blueprint4.Icon
          icon="heart"
        />
      </NavLink>
      <div
        className="visible-xs"
      >
        <Blueprint4.NavbarDivider
          className="thin-divider"
        />
      </div>
      <div
        className="hidden-xs"
      >
        <Blueprint4.NavbarDivider
          className="default-divider"
        />
      </div>
      <Dropdown />
    </Blueprint4.NavbarGroup>
  </Blueprint4.Navbar>
  <Routes>
    <Route
      element={null}
      path="/playground"
    />
    <Route
      element={null}
      path="/githubassessments/*"
    />
    <Route
      element={null}
      path="/contributors"
    />
    <Route
      element={null}
      path="/courses/:courseId/sourcecast"
    />
    <Route
      element={null}
      path="/courses/:courseId/achievements"
    />
    <Route
      element={<SicpNavigationBar />}
      path="/sicpjs/:section?"
    />
    <Route
      element={null}
      path="*"
    />
  </Routes>
</React.Fragment>
`;

exports[`NavigationBar Renders correctly for student with course 1`] = `
<React.Fragment>
  <Blueprint4.Navbar
    className="NavigationBar primary-navbar primary-navbar bp4-dark"
  >
    <Blueprint4.NavbarGroup
      align="left"
    >
      <Blueprint4.Popover2
        boundary="clippingParents"
        captureDismiss={false}
        content={
          <Blueprint4.Navbar>
            <Blueprint4.NavbarGroup
              align="left"
            >
              <NavLink
                className={[Function]}
                title="Missions"
                to="/courses/1/missions"
              >
                <Blueprint4.Icon
                  icon="flame"
                />
                <div
                  className="hidden-xs hidden-sm"
                >
                  Missions
                </div>
                <NotificationBadge
                  disableHover={true}
                  notificationFilter={[Function]}
                />
              </NavLink>
              <NavLink
                className={[Function]}
                title="Quests"
                to="/courses/1/quests"
              >
                <Blueprint4.Icon
                  icon="lightbulb"
                />
                <div
                  className="hidden-xs hidden-sm"
                >
                  Quests
                </div>
                <NotificationBadge
                  disableHover={true}
                  notificationFilter={[Function]}
                />
              </NavLink>
              <NavLink
                className={[Function]}
                title="Paths"
                to="/courses/1/paths"
              >
                <Blueprint4.Icon
                  icon="predictive-analysis"
                />
                <div
                  className="hidden-xs hidden-sm"
                >
                  Paths
                </div>
                <NotificationBadge
                  disableHover={true}
                  notificationFilter={[Function]}
                />
              </NavLink>
              <NavLink
                className={[Function]}
                title="Contests"
                to="/courses/1/contests"
              >
                <Blueprint4.Icon
                  icon="comparison"
                />
                <div
                  className="hidden-xs hidden-sm"
                >
                  Contests
                </div>
                <NotificationBadge
                  disableHover={true}
                  notificationFilter={[Function]}
                />
              </NavLink>
              <NavLink
                className={[Function]}
                title="Missions"
                to="/courses/1/missions"
              >
                <Blueprint4.Icon
                  icon="manual"
                />
                <div
                  className="hidden-xs hidden-sm"
                >
                  Missions
                </div>
                <NotificationBadge
                  disableHover={true}
                  notificationFilter={[Function]}
                />
              </NavLink>
            </Blueprint4.NavbarGroup>
          </Blueprint4.Navbar>
        }
        defaultIsOpen={false}
        disabled={true}
        fill={false}
        hasBackdrop={false}
        hoverCloseDelay={300}
        hoverOpenDelay={150}
        inheritDarkTheme={true}
        interactionKind="hover"
        matchTargetWidth={false}
        minimal={false}
        openOnTargetFocus={true}
        popoverClassName="desktop-navbar-popover"
        position="bottom-right"
        positioningStrategy="absolute"
        shouldReturnFocusOnClose={false}
        targetTagName="span"
        transitionDuration={300}
        usePortal={true}
      >
        <NavLink
          className="NavigationBar__link bp4-button bp4-minimal bp4-active"
          to="/courses/1"
        >
          <Blueprint4.Icon
            icon="symbol-diamond"
          />
          <Blueprint4.NavbarHeading
            style={
              Object {
                "paddingBottom": "0px",
              }
            }
          >
            CS1101S
          </Blueprint4.NavbarHeading>
        </NavLink>
      </Blueprint4.Popover2>
      <NavLink
        className={[Function]}
        title="Sourcecast"
        to="/courses/1/sourcecast"
      >
        <Blueprint4.Icon
          icon="music"
        />
        <div
          className=""
        >
          Sourcecast
        </div>
      </NavLink>
      <NavLink
        className={[Function]}
        title="Playground"
        to="/playground"
      >
        <Blueprint4.Icon
          icon="code"
        />
        <div
          className=""
        >
          Playground
        </div>
      </NavLink>
      <NavLink
        className={[Function]}
        title="Classroom"
        to="/githubassessments"
      >
        <Blueprint4.Icon
          icon="briefcase"
        />
        <div
          className=""
        >
          Classroom
        </div>
      </NavLink>
      <NavLink
        className={[Function]}
        title="SICP JS"
        to="/sicpjs"
      >
        <Blueprint4.Icon
          icon="book"
        />
        <div
          className=""
        >
          SICP JS
        </div>
      </NavLink>
      <NavLink
        className={[Function]}
        title="Achievements"
        to="/courses/1/achievements"
      >
        <Blueprint4.Icon
          icon="mountain"
        />
        <div
          className=""
        >
          Achievements
        </div>
      </NavLink>
    </Blueprint4.NavbarGroup>
    <Blueprint4.NavbarGroup
      align="right"
    >
      <NavLink
        className={[Function]}
        to="/contributors"
      >
        <Blueprint4.Icon
          icon="heart"
        />
      </NavLink>
      <div
        className="visible-xs"
      >
        <Blueprint4.NavbarDivider
          className="thin-divider"
        />
      </div>
      <div
        className="hidden-xs"
      >
        <Blueprint4.NavbarDivider
          className="default-divider"
        />
      </div>
      <Dropdown />
    </Blueprint4.NavbarGroup>
  </Blueprint4.Navbar>
  <Routes>
    <Route
      element={null}
      path="/playground"
    />
    <Route
      element={null}
      path="/githubassessments/*"
    />
    <Route
      element={null}
      path="/contributors"
    />
    <Route
      element={null}
      path="/courses/:courseId/sourcecast"
    />
    <Route
      element={null}
      path="/courses/:courseId/achievements"
    />
    <Route
      element={<SicpNavigationBar />}
      path="/sicpjs/:section?"
    />
    <Route
      element={
        <AcademyNavigationBar
          assessmentTypes={
            Array [
              "Missions",
              "Quests",
              "Paths",
              "Contests",
              "Missions",
            ]
          }
        />
      }
      path="*"
    />
  </Routes>
</React.Fragment>
`;

exports[`NavigationBar Renders correctly for student without course 1`] = `
<React.Fragment>
  <Blueprint4.Navbar
    className="NavigationBar primary-navbar primary-navbar bp4-dark"
  >
    <Blueprint4.NavbarGroup
      align="left"
    >
      <Blueprint4.Popover2
        boundary="clippingParents"
        captureDismiss={false}
        content={
          <Blueprint4.Navbar>
            <Blueprint4.NavbarGroup
              align="left"
            />
          </Blueprint4.Navbar>
        }
        defaultIsOpen={false}
        disabled={true}
        fill={false}
        hasBackdrop={false}
        hoverCloseDelay={300}
        hoverOpenDelay={150}
        inheritDarkTheme={true}
        interactionKind="hover"
        matchTargetWidth={false}
        minimal={false}
        openOnTargetFocus={true}
        popoverClassName="desktop-navbar-popover"
        position="bottom-right"
        positioningStrategy="absolute"
        shouldReturnFocusOnClose={false}
        targetTagName="span"
        transitionDuration={300}
        usePortal={true}
      >
        <NavLink
          className="NavigationBar__link bp4-button bp4-minimal bp4-active"
          to="/welcome"
        >
          <Blueprint4.Icon
            icon="symbol-diamond"
          />
          <Blueprint4.NavbarHeading
            style={
              Object {
                "paddingBottom": "0px",
              }
            }
          >
            Source Academy @ NUS
          </Blueprint4.NavbarHeading>
        </NavLink>
      </Blueprint4.Popover2>
      <NavLink
        className={[Function]}
        title="Classroom"
        to="/githubassessments"
      >
        <Blueprint4.Icon
          icon="briefcase"
        />
        <div
          className=""
        >
          Classroom
        </div>
      </NavLink>
      <NavLink
        className={[Function]}
        title="SICP JS"
        to="/sicpjs"
      >
        <Blueprint4.Icon
          icon="book"
        />
        <div
          className=""
        >
          SICP JS
        </div>
      </NavLink>
    </Blueprint4.NavbarGroup>
    <Blueprint4.NavbarGroup
      align="right"
    >
      <NavLink
        className={[Function]}
        to="/contributors"
      >
        <Blueprint4.Icon
          icon="heart"
        />
      </NavLink>
      <div
        className="visible-xs"
      >
        <Blueprint4.NavbarDivider
          className="thin-divider"
        />
      </div>
      <div
        className="hidden-xs"
      >
        <Blueprint4.NavbarDivider
          className="default-divider"
        />
      </div>
      <Dropdown />
    </Blueprint4.NavbarGroup>
  </Blueprint4.Navbar>
  <Routes>
    <Route
      element={null}
      path="/playground"
    />
    <Route
      element={null}
      path="/githubassessments/*"
    />
    <Route
      element={null}
      path="/contributors"
    />
    <Route
      element={null}
      path="/courses/:courseId/sourcecast"
    />
    <Route
      element={null}
      path="/courses/:courseId/achievements"
    />
    <Route
      element={<SicpNavigationBar />}
      path="/sicpjs/:section?"
    />
    <Route
      element={null}
      path="*"
    />
  </Routes>
</React.Fragment>
`;
